--- a/backup/unit1.lfm
+++ b/backup/unit1.lfm
@@ -3,6 +3,34 @@ object Form1: TForm1
   Height = 240
   Top = 188
   Width = 320
-  Caption = 'Form1'
+  Caption = 'Form'
+  ClientHeight = 240
+  ClientWidth = 320
+  Color = clOlive
   LCLVersion = '2.0.6.0'
+  object Button1: TButton
+    Left = 112
+    Height = 25
+    Top = 48
+    Width = 75
+    Caption = 'halo'
+    OnClick = Button1Click
+    TabOrder = 0
+  end
+  object eNama: TEdit
+    Left = 16
+    Height = 23
+    Top = 48
+    Width = 80
+    TabOrder = 1
+    Text = 'eNama'
+  end
+  object Label1: TLabel
+    Left = 16
+    Height = 15
+    Top = 24
+    Width = 32
+    Caption = 'Nama'
+    ParentColor = False
+  end
 end
